--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
   "homepage": "https://github.com/pgomes13/genie-kiwiland#readme",
   "dependencies": {
     "gulp": "^3.9.1",
-    "require-dir": "^0.3.1"
+    "gulp-util": "^3.0.7",
+    "path": "^0.12.7",
+    "require-dir": "^0.3.1",
+    "run-sequence": "^1.2.2"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.17.5"
   }
 }
