--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.5.8"
+    "angular": "^1.5.8",
+    "angular-ui-router": "^0.3.2",
+    "material-design-lite": "^1.2.1"
   }
 }
