implemented dialog for results display

--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-ui-router": "^0.3.2",
-    "material-design-lite": "^1.2.1"
+    "material-design-lite": "^1.2.1",
+    "angular-material": "^1.1.1"
   }
 }
