--- a/package.json
+++ b/package.json
@@ -30,15 +30,24 @@
     "gulp-bower": "0.0.13",
     "gulp-cache": "^0.4.5",
     "gulp-concat": "^2.6.0",
+    "gulp-filter": "^4.0.0",
     "gulp-if": "^2.0.1",
     "gulp-inject": "^4.1.0",
+    "gulp-karma": "0.0.5",
     "gulp-plumber": "^1.1.0",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-util": "^3.0.7",
+    "jasmine": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-spec-reporter": "0.0.26",
     "main-bower-files": "^2.13.1",
     "path": "^0.12.7",
+    "phantomjs-prebuilt": "^2.1.13",
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2"
   },
