--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular": "^1.5.8",
     "angular-ui-router": "^0.3.2",
     "material-design-lite": "^1.2.1",
-    "angular-material": "^1.1.1"
+    "angular-material": "^1.1.1",
+    "angular-mocks": "^1.5.8"
   }
 }
