--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/pgomes13/genie-kiwiland#readme",
   "dependencies": {
+    "babel": "^6.5.2",
     "babel-core": "^6.18.2",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "chalk": "^1.1.3",
     "gulp": "^3.9.1",
@@ -41,6 +43,7 @@
     "gulp-util": "^3.0.7",
     "jasmine": "^2.5.2",
     "karma": "^1.3.0",
+    "karma-babel-preprocessor": "^6.0.1",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2",
