--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An AngularJS solution of the Kiwiland problem by Genie Solutions",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
