--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "An AngularJS solution of the Kiwiland problem by Genie Solutions",
   "main": "index.js",
   "scripts": {
+    "dev": "gulp --dev",
+    "prod": "gulp",
+    "build": "gulp build",
     "test": "gulp test"
   },
   "repository": {
@@ -27,19 +30,26 @@
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "chalk": "^1.1.3",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-bower": "0.0.13",
     "gulp-cache": "^0.4.5",
     "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.2",
     "gulp-filter": "^4.0.0",
     "gulp-if": "^2.0.1",
     "gulp-inject": "^4.1.0",
     "gulp-karma": "0.0.5",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-replace": "^0.5.4",
+    "gulp-rev": "^7.1.2",
+    "gulp-rev-replace": "^0.4.3",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^2.2.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-useref": "^3.1.2",
     "gulp-util": "^3.0.7",
     "jasmine": "^2.5.2",
     "karma": "^1.3.0",
